--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
-  margin-top: 45px;
   padding-bottom: 37px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  margin-top: 45px;
+  margin-bottom: 40px;
 }
