--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,12 @@
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__logo/header__logo.css');
+
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__add-button/profile__add-button.css');
+@import url('../blocks/profile/__edit-button/profile__edit-button.css');
+@import url('../blocks/profile/__img/profile__img.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__text-info/profile__text-info.css');
+@import url('../blocks/profile/__job/profile__job.css');
+@import url('../blocks/profile/__name/profile__name.css');
