--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,9 @@
 @import url('../vendor/normalize.css');
 
 @import url('../blocks/page/page.css');
-@import url('../blocks/page/__center/page__center.css');
+/* @import url('../blocks/page/__center/page__center.css'); */
+
+@import url('../blocks/center/center.css');
 
 @import url('../blocks/content/content.css');
 
@@ -18,3 +20,11 @@
 @import url('../blocks/profile/__text-info/profile__text-info.css');
 @import url('../blocks/profile/__job/profile__job.css');
 @import url('../blocks/profile/__name/profile__name.css');
+
+@import url('../blocks/elements/elements.css');
+@import url('../blocks/element/element.css');
+@import url('../blocks/element/__description/element__description.css');
+@import url('../blocks/element/__img/element__img.css');
+@import url('../blocks/element/__like-ico/element__like-ico.css');
+@import url('../blocks/element/__like-ico/_active/element__like-ico_active.css');
+@import url('../blocks/element/__title/element__title.css');
