feat: add footer

--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,6 +1,7 @@
 .element__description {
   display: flex;
   justify-content: space-between;
-  margin: 25px 15px 31px;
-  gap: 45px;
+  margin: 21px 22px 26px;
+  gap: 30px;
+  align-items: center;
 }
