--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -5,5 +5,7 @@
   line-height: 22px;
   color: #ffffff;
   grid-column: 1 / 3;
-  /* grid-row: 1/3; */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
