feat:add adaptive & fix bugs

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,3 +4,21 @@
   margin-top: 45px;
   margin-bottom: 40px;
 }
+
+@media screen and (max-width: 984px) {
+  .header {
+    padding-bottom: 31px;
+    margin-top: 28px;
+    margin-bottom: 40px;
+    padding-left: 27px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header {
+    padding-bottom: 27px;
+    margin-top: 28px;
+    margin-bottom: 42px;
+    padding-left: 27px;
+  }
+}
