--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -5,3 +5,19 @@
   column-gap: 17px;
   margin-bottom: 67px;
 }
+
+@media screen and (max-width: 984px) {
+  .elements {
+    grid-template-columns: repeat(2, 282px);
+    justify-content: center;
+    margin-bottom: 48px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .elements {
+    grid-template-columns: 282px;
+    justify-content: center;
+    margin-bottom: 48px;
+  }
+}
