--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,7 +1,14 @@
 .footer__text {
-  margin: 0 0 60px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+}
+
+@media screen and (max-width: 600px) {
+  .footer__text {
+    font-size: 14px;
+    line-height: 17px;
+    color: #545454;
+  }
 }
