--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,3 +1,9 @@
 .popup__form {
   margin: 34px 36px 37px;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__form {
+    margin: 25px 22px;
+  }
+}
