--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,5 +3,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin-bottom: 47px;
+  margin-bottom: 46px;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 73px;
+  }
 }
