--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
@@ -8,4 +8,10 @@
   justify-content: center;
   align-items: center;
   display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .popup {
+    flex-direction: column;
+  }
 }
