--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,3 +2,18 @@
   display: flex;
   gap: 30px;
 }
+
+@media screen and (max-width: 984px) {
+  .profile__info {
+    margin-bottom: 36px;
+    gap: 27px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__info {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 32px;
+  }
+}
