--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -8,3 +8,11 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+@media screen and (max-width: 600px) {
+  .profile__name {
+    font-size: 27px;
+    line-height: 33px;
+    padding-left: 26px;
+  }
+}
