--- a/blocks/profile/__text-info/profile__text-info.css
+++ b/blocks/profile/__text-info/profile__text-info.css
@@ -1,9 +1,24 @@
 .profile__text-info {
   display: grid;
-  grid-template-columns: 295px 1fr;
+  grid-template-columns: 295px auto;
   align-content: center;
-  /* align-items: baseline; */
   column-gap: 17px;
   row-gap: 7px;
-  /* grid-template-rows: repeat(2, 100%); */
+  align-items: baseline;
+}
+
+@media screen and (max-width: 984px) {
+  .profile__text-info {
+    grid-template-columns: 295px 24px;
+    row-gap: 14px;
+    column-gap: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__text-info {
+    grid-template-columns: 216px 18px;
+    row-gap: 6px;
+    column-gap: 10px;
+  }
 }
