--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,16 @@
   align-items: center;
   margin-bottom: 50px;
 }
+
+@media screen and (max-width: 984px) {
+  .profile {
+    flex-direction: column;
+    margin-bottom: 32px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile {
+    flex-direction: column;
+  }
+}
