--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,4 +1,5 @@
 .footer__text {
+  margin: 0;
   font-size: 18px;
   line-height: 22px;
   color: #545454;
@@ -8,6 +9,5 @@
   .footer__text {
     font-size: 14px;
     line-height: 17px;
-    color: #545454;
   }
 }
