--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,7 @@
 .page {
-  font-family: 'Inter', sans-serif;
+  padding-left: calc(50% - 880px / 2);
+  padding-right: calc(50% - 880px / 2);
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-weight: 400;
   background-color: #000;
 }
