--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,10 +1,22 @@
 .profile__add-button {
-  box-sizing: border-box;
   padding: 0;
-  border: none;
-  background: none;
+  border: 2px solid #fff;
+  height: 50px;
+  width: 150px;
+  background-image: url('../../../images/profile__add-button.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .profile__add-button:hover {
   opacity: 0.6;
+}
+
+@media screen and (max-width: 984px) {
+  .profile__add-button {
+    background-size: 16px 16px;
+    width: 282px;
+  }
 }
