--- a/blocks/popup/__close-btn/popup__close-btn.css
+++ b/blocks/popup/__close-btn/popup__close-btn.css
@@ -10,7 +10,7 @@
   background-position: center;
   position: relative;
   bottom: 190px;
-  right: -8px;
+  right: -7px;
 }
 
 .popup__close-btn:hover {
@@ -21,7 +21,8 @@
   .popup__close-btn {
     width: 20px;
     height: 20px;
-    bottom: 17px;
-    right: -131px;
+    background-size: contain;
+    top: -17px;
+    left: 130px;
   }
 }
