--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: transparent;
+  border-radius: 2px;
   cursor: pointer;
 }
 
