--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -9,3 +9,9 @@
   width: 100%;
   margin-bottom: 29px;
 }
+
+.popup__input::placeholder {
+  font-size: 14px;
+  line-height: 17px;
+  color: #c4c4c4;
+}
