--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,4 +1,10 @@
 .element__img {
-  max-width: 282px;
+  width: 100%;
   border-radius: 10px 10px 0 0;
+  height: 282px;
+  object-fit: cover;
+}
+
+.element__img:hover {
+  cursor: pointer;
 }
