--- a/blocks/popup/__btn/popup__btn.css
+++ b/blocks/popup/__btn/popup__btn.css
@@ -1,6 +1,7 @@
 .popup__btn {
   border-radius: 2px;
-  padding: 14px 132px;
+  width: 100%;
+  padding: 14px 0;
   border: none;
   background-color: #000;
   color: #fff;
