--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,9 @@
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
-  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.2s linear;
 }
 
 @media screen and (max-width: 600px) {
