--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,15 +1,15 @@
 .popup__title {
+  margin: 34px 0 46px 36px;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin-bottom: 46px;
 }
 
 @media screen and (max-width: 600px) {
   .popup__title {
+    margin: 25px 0 73px 22px;
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 73px;
   }
 }
