fix: fix popup open/close

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,9 +7,14 @@
   background-color: rgba(0, 0, 0, 0.5);
   justify-content: center;
   align-items: center;
+  display: flex;
+  /* opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 0.3s, opacity 0.3s ease-in-out; */
+
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0s, opacity 0.2s linear;
+  transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 }
 
 @media screen and (max-width: 600px) {
