--- a/blocks/popup/_closed/popup_closed.css
+++ b/blocks/popup/_closed/popup_closed.css
@@ -1,6 +1,6 @@
 .popup_closed {
-  display: flex;
+  /* display: flex; */
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.2s, opacity 0.2s linear;
+  /* transition: visibility 0.2s, opacity 0.2s linear; */
 }
