--- a/blocks/popup/_closed/popup_closed.css
+++ b/blocks/popup/_closed/popup_closed.css
@@ -2,5 +2,5 @@
   /* display: flex; */
   visibility: hidden;
   opacity: 0;
-  /* transition: visibility 0.2s, opacity 0.2s linear; */
+  transition: visibility 0.2s, opacity 0.2s linear;
 }
