--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -14,7 +14,13 @@
 
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.3s, opacity 0.3s linear;
+  transition: all 0.25s linear;
+
+  /* -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important; */
 }
 
 @media screen and (max-width: 600px) {
