feat: add validation forms

--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,5 +1,6 @@
 .popup__form {
-  margin: 34px 36px 37px;
+  margin: 44px 36px 37px;
+  position: relative;
 }
 
 @media screen and (max-width: 600px) {
