--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,5 @@
 .popup__input {
+  padding-top: 5px;
   padding-bottom: 9px;
   font-weight: 400;
   font-size: 14px;
@@ -7,7 +8,8 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
-  margin-bottom: 29px;
+
+  position: relative;
 }
 
 .popup__input::placeholder {
