--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,7 @@
 .popup__title {
-  margin: 34px 0 46px 36px;
+  margin: 0;
+  margin-top: 34px;
+  margin-left: 36px;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
