--- a/pages/index.css
+++ b/pages/index.css
@@ -40,8 +40,13 @@
 @import url('../blocks/popup/__form/popup__form.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('../blocks/popup/__input-error-message/popup__input-error-message.css');
+@import url('../blocks/popup/__input-error-message/_active/popup__input-error-message_active.css');
 @import url('../blocks/popup/__btn/popup__btn.css');
+@import url('../blocks/popup/__btn/_disabled/popup__btn_disabled.css');
 @import url('../blocks/popup/__close-btn/popup__close-btn.css');
+@import url('../blocks/popup/__input-field/popup__input-field.css');
 
 @import url('../blocks/popup/_type/popup_type_view-image.css');
 @import url('../blocks/popup/__view-image-figure/popup__view-image-figure.css');
