--- a/blocks/popup/__input-error-message/popup__input-error-message.css
+++ b/blocks/popup/__input-error-message/popup__input-error-message.css
@@ -2,9 +2,8 @@
   color: #ff0000;
   font-size: 12px;
   line-height: 15px;
-  opacity: 0;
-  position: absolute;
-  top: calc(100% + 5px);
-  left: 0;
+  opacity: 1;
+  position: relative;
   transition: 0.3s;
+  min-height: 30px;
 }
