refactor: refactor classes Card and Form

--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,4 +1,6 @@
 .element__img {
+  display: block;
+  background-color: #000000;
   width: 100%;
   border-radius: 10px 10px 0 0;
   height: 282px;
@@ -7,4 +9,7 @@
 
 .element__img:hover {
   cursor: pointer;
+}
+.element__img[alt] {
+  color: #ffffff;
 }
