--- a/main.css
+++ b/main.css
@@ -8,7 +8,8 @@
 .profile{align-items:center;display:flex;justify-content:space-between;margin-bottom:50px}@media screen and (max-width:984px){.profile{flex-direction:column;margin-bottom:37px}}
 .profile__add-button{background-color:transparent;background-image:url(bed8c136e13907f5eefb.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;height:50px;padding:0;width:150px}.profile__add-button:hover{opacity:.6}@media screen and (max-width:984px){.profile__add-button{background-size:16px 16px;width:282px}}
 .profile__edit-button{background-color:transparent;background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;cursor:pointer;height:24px;padding:0;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:600px){.profile__edit-button{height:18px;width:18px}}
-.profile__img{border-radius:50%;max-width:120px}
+.profile__img-wrapper{border-radius:50%;height:120px;overflow:hidden;position:relative;width:120px}.profile__img-wrapper:before{background:url(a086f758840ae814ecde.svg) no-repeat 50%;cursor:pointer;transition:opacity .3s ease;z-index:1}.profile__img-wrapper:after,.profile__img-wrapper:before{bottom:0;content:"";left:0;opacity:0;position:absolute;right:0;top:0}.profile__img-wrapper:after{background:rgba(0,0,0,.8);transition:opacity .3s linear}.profile__img-wrapper:hover:after,.profile__img-wrapper:hover:before{opacity:1}
+.profile__img{display:flex;left:50%;max-height:120px;position:absolute;top:50%;transform:translate(-50%,-50%)}
 .profile__info{display:flex;gap:30px}@media screen and (max-width:984px){.profile__info{gap:27px;margin-bottom:36px}}@media screen and (max-width:600px){.profile__info{align-items:center;flex-direction:column;margin-bottom:34px}}
 .profile__text-info{align-content:center;align-items:baseline;-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:295px 24px;row-gap:7px}@media screen and (max-width:984px){.profile__text-info{-moz-column-gap:10px;column-gap:10px;row-gap:14px}}@media screen and (max-width:600px){.profile__text-info{grid-template-columns:216px 18px;row-gap:6px}}
 .profile__job{color:#fff;font-size:18px;grid-column:1/3;line-height:22px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:600px){.profile__job{font-size:14px;line-height:17px;text-align:center}}
@@ -21,6 +22,7 @@
 .element__title{color:#000;font-size:24px;font-weight:900;line-height:29px;margin:0;max-width:195px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .element__like-btn{background-color:transparent;background-image:url(e3b9ba5840ebe97bc077.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:19px;padding:0;width:22px}.element__like-btn:hover{opacity:.5}
 .element__like-btn_active{background-image:url(35948469632d0421d697.svg)}
+.element__like-count{bottom:15px;color:#000;font-family:Inter;font-size:13px;line-height:16px;position:absolute;right:27px}
 .footer{margin:0 0 60px}@media screen and (max-width:984px){.footer{margin:0 19px 36px}}
 .footer__text{color:#545454;font-size:18px;line-height:22px;margin:0}@media screen and (max-width:600px){.footer__text{font-size:14px;line-height:17px}}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .25s linear;visibility:hidden;width:100vw}@media screen and (max-width:600px){.popup{flex-direction:column-reverse}}
@@ -34,8 +36,10 @@
 .popup__input-error-message_active{opacity:1}
 .popup__btn{background-color:#000;border:none;border-radius:2px;color:#fff;font-size:18px;line-height:22px;margin-top:16px;padding:14px 0;text-align:center;width:100%}.popup__btn:hover{cursor:pointer;opacity:.8}@media screen and (max-width:600px){.popup__btn{font-size:14px;line-height:17px;margin-top:16px;padding:14px 82px}}
 .popup__btn_disabled{background-color:transparent;border:1px solid #000;color:#000;opacity:.2;pointer-events:none}.popup__btn_disabled:hover{cursor:default;opacity:.2}
+.popup__btn_disabled2{background-color:transparent;color:#000;opacity:.2;outline:1px solid #000;pointer-events:none}.popup__btn_disabled2:hover{cursor:default;opacity:.2}
 .popup__close-btn{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:32px;padding:0;position:absolute;right:-40px;top:-40px;width:32px}.popup__close-btn:hover{opacity:.6}@media screen and (max-width:600px){.popup__close-btn{background-size:contain;height:20px;right:0;top:-36px;width:20px}}
 .popup__input-field{display:flex;flex-direction:column;margin-bottom:0;position:relative}
+.popup__form-confirm-delete-card{margin-top:16px}
 .popup_type_view-image{background-color:rgba(0,0,0,.9)}
 .popup__view-image-figure{margin:0;position:relative}
 .popup__view-image-item{max-height:75vh;max-width:75vw;vertical-align:middle}
