feat: complete PW #9

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -16,6 +16,7 @@
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__add-button/profile__add-button.css');
 @import url('../blocks/profile/__edit-button/profile__edit-button.css');
+@import url('../blocks/profile/__img-wrapper/profile__img-wrapper.css');
 @import url('../blocks/profile/__img/profile__img.css');
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__text-info/profile__text-info.css');
@@ -30,6 +31,7 @@
 @import url('../blocks/element/__title/element__title.css');
 @import url('../blocks/element/__like-btn/element__like-btn.css');
 @import url('../blocks/element/__like-btn/_active/element__like-btn_active.css');
+@import url('../blocks/element/__like-count/element__like-count.css');
 
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__text/footer__text.css');
@@ -45,8 +47,10 @@
 @import url('../blocks/popup/__input-error-message/_active/popup__input-error-message_active.css');
 @import url('../blocks/popup/__btn/popup__btn.css');
 @import url('../blocks/popup/__btn/_disabled/popup__btn_disabled.css');
+@import url('../blocks/popup/__btn/_disabled/popup__btn_disabled2.css');
 @import url('../blocks/popup/__close-btn/popup__close-btn.css');
 @import url('../blocks/popup/__input-field/popup__input-field.css');
+@import url('../blocks/popup/__form-confirm-delete-card/popup__form-confirm-delete-card.css');
 
 @import url('../blocks/popup/_type/popup_type_view-image.css');
 @import url('../blocks/popup/__view-image-figure/popup__view-image-figure.css');
