--- a/src/blocks/profile/__img/profile__img.css
+++ b/src/blocks/profile/__img/profile__img.css
@@ -1,4 +1,8 @@
 .profile__img {
-  max-width: 120px;
-  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  max-height: 120px;
 }
